# pluma

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  build.sh  gradle.properties  java.gradle  pom.xml  settings.gradle
jni/: Android.mk  Application.mk  JSQLiteFunction.cpp  JSQLiteFunction.h  PlumaRuntime.cpp  PlumaRuntime.h  SQLiteFunction.cpp  Utils.cpp  Utils.h  database.c  database.cpp  database.h  statement.c  statement.cpp  statement.h
pluma/: .gitignore  CMakeLists.txt  android.gradle  build.gradle  build.sh  java.gradle  proguard-rules.pro
pluma/src/main/: AndroidManifest.xml
pluma/src/main/java/com/flipstudio/pluma/: Database.java  Pluma.java  ResultSet.java  SQLiteException.java  SQLiteFunction.java  Statement.java  StatementCache.java
pluma/src/main/jni/: Android.mk  Application.mk  SQLiteFunction.h  Utils.cpp  character_tokenizer.cpp  statement.cpp  statement.h
pluma/src/main/libs/: libpluma.dylib
pluma/src/test/java/com/flipstudio/pluma/: PlumaTests.java
src/main/java/com/flipstudio/pluma/: Constants.java  CustomFunction.java  Database.java  Pluma.java  ResultSet.java  SQLiteException.java  Statement.java
src/main/jni/: Android.mk  JSQLiteFunction.cpp  SQLiteFunction.cpp  database.h
src/test/java/com/flipstudio/pluma/: PlumaTests.java
src/test/java/com/flipstudio/pluma/models/: Person.java
src/test/java/com/flipstudio/pluma/tests/: PlumaTests.java
src/test/resources/: TestDB.sqlite
